chore(QA): regression fixes pre-Stripe

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8Xw8AAtMB9bVsglQAAAAASUVORK5CYII=" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="One selfie → your colors → a tight shopping shortlist you’ll actually wear." />
+    <meta property="og:title" content="Curated — Selfie → Seasonal Guide" />
+    <meta property="og:description" content="Selfie → Palette → Picks in ~5 minutes." />
+    <meta property="og:image" content="/og.png" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
     <title>Curated</title>
   </head>
   <body>
