chore(typography): wire Canela Deck (Regular/Medium/Bold) + preloads; apply to headings

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta property="og:image" content="/og.png" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
+    <link rel="preload" href="/fonts/canela-deck/CanelaDeck-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/canela-deck/CanelaDeck-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <title>Curated</title>
   </head>
   <body>
