--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="preload" href="/fonts/canela-deck/CanelaDeck-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/canela-deck/CanelaDeck-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/NeueHaasUnica/NeueHaasUnica-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff2" as="font" type="font/woff2" crossorigin>
     <title>Curated</title>
   </head>
   <body>
